--- a/New Ice/New Ice/Base.lproj/Main_iPhone.storyboard
+++ b/New Ice/New Ice/Base.lproj/Main_iPhone.storyboard
@@ -151,48 +151,61 @@
                                     <rect key="frame" x="0.0" y="0.0" width="319" height="112"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NQs-h4-1b2">
-                                            <rect key="frame" x="299" y="0.0" width="20" height="112"/>
-                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                            <color key="backgroundColor" red="0.70980393886566162" green="0.0039215688593685627" blue="0.0078431377187371254" alpha="1" colorSpace="deviceRGB"/>
+                                        <view tag="-1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nx3-3g-OPi">
+                                            <rect key="frame" x="0.0" y="0.0" width="319" height="112"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <subviews>
+                                                <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NQs-h4-1b2">
+                                                    <rect key="frame" x="299" y="0.0" width="20" height="112"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                    <color key="backgroundColor" red="0.70980393886566162" green="0.0039215688593685627" blue="0.0078431377187371254" alpha="1" colorSpace="deviceRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="20" id="NRw-e3-mo9"/>
+                                                    </constraints>
+                                                </view>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lecture" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Lp-wH-AEO">
+                                                    <rect key="frame" x="20" y="42" width="73" height="27"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="COS 333" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rui-UO-GSq">
+                                                    <rect key="frame" x="20" y="75" width="59" height="17"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Today 3PM" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZND-WD-Cn0">
+                                                    <rect key="frame" x="215" y="47" width="73" height="17"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="20" id="NRw-e3-mo9"/>
+                                                <constraint firstItem="9Lp-wH-AEO" firstAttribute="leading" secondItem="nx3-3g-OPi" secondAttribute="leading" constant="20" symbolic="YES" id="3oc-ml-q0m"/>
+                                                <constraint firstItem="NQs-h4-1b2" firstAttribute="top" secondItem="nx3-3g-OPi" secondAttribute="top" id="DyE-Wt-wzB"/>
+                                                <constraint firstItem="ZND-WD-Cn0" firstAttribute="centerY" secondItem="9Lp-wH-AEO" secondAttribute="centerY" id="Rk1-LK-Slc"/>
+                                                <constraint firstAttribute="bottom" secondItem="NQs-h4-1b2" secondAttribute="bottom" id="g6O-uV-7Ur"/>
+                                                <constraint firstItem="9Lp-wH-AEO" firstAttribute="leading" secondItem="rui-UO-GSq" secondAttribute="leading" id="kch-4d-5NB"/>
+                                                <constraint firstAttribute="bottom" secondItem="rui-UO-GSq" secondAttribute="bottom" constant="20" symbolic="YES" id="l1K-tp-2mb"/>
+                                                <constraint firstItem="NQs-h4-1b2" firstAttribute="leading" secondItem="ZND-WD-Cn0" secondAttribute="trailing" constant="11" id="p6Y-nv-1X7"/>
+                                                <constraint firstAttribute="centerY" secondItem="ZND-WD-Cn0" secondAttribute="centerY" constant="0.5" id="pM9-kY-Hne"/>
+                                                <constraint firstAttribute="trailing" secondItem="NQs-h4-1b2" secondAttribute="trailing" id="qpU-Vc-oco"/>
                                             </constraints>
                                         </view>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lecture" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Lp-wH-AEO">
-                                            <rect key="frame" x="20" y="42" width="73" height="27"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="COS 333" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rui-UO-GSq">
-                                            <rect key="frame" x="20" y="75" width="59" height="17"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Today 3PM" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZND-WD-Cn0">
-                                            <rect key="frame" x="218" y="47" width="73" height="17"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="ZND-WD-Cn0" firstAttribute="centerY" secondItem="9Lp-wH-AEO" secondAttribute="centerY" id="a45-hH-5kb"/>
-                                    <constraint firstItem="NQs-h4-1b2" firstAttribute="leading" secondItem="ZND-WD-Cn0" secondAttribute="trailing" constant="8" symbolic="YES" id="aJv-9s-Vam"/>
-                                    <constraint firstAttribute="bottom" secondItem="NQs-h4-1b2" secondAttribute="bottom" id="dsw-AA-ij2"/>
-                                    <constraint firstAttribute="centerY" secondItem="9Lp-wH-AEO" secondAttribute="centerY" constant="0.5" id="eIf-lV-gmu"/>
-                                    <constraint firstItem="9Lp-wH-AEO" firstAttribute="leading" secondItem="Wsj-af-L9N" secondAttribute="leading" constant="20" id="fqH-h2-1ZL"/>
-                                    <constraint firstItem="NQs-h4-1b2" firstAttribute="top" secondItem="Wsj-af-L9N" secondAttribute="top" id="mm3-Mi-UjG"/>
-                                    <constraint firstAttribute="bottom" secondItem="rui-UO-GSq" secondAttribute="bottom" constant="20" id="vDS-Fi-JPE"/>
-                                    <constraint firstItem="rui-UO-GSq" firstAttribute="leading" secondItem="9Lp-wH-AEO" secondAttribute="leading" id="vZF-Zm-kfY"/>
-                                    <constraint firstAttribute="trailing" secondItem="NQs-h4-1b2" secondAttribute="trailing" id="xPR-G0-buF"/>
+                                    <constraint firstItem="nx3-3g-OPi" firstAttribute="leading" secondItem="Wsj-af-L9N" secondAttribute="leading" id="6YM-4K-4uF"/>
+                                    <constraint firstAttribute="trailing" secondItem="nx3-3g-OPi" secondAttribute="trailing" id="QeU-JF-aN3"/>
+                                    <constraint firstAttribute="bottom" secondItem="nx3-3g-OPi" secondAttribute="bottom" id="ZbE-pD-IKg"/>
+                                    <constraint firstItem="nx3-3g-OPi" firstAttribute="top" secondItem="Wsj-af-L9N" secondAttribute="top" id="kWi-cR-YUA"/>
                                 </constraints>
                                 <connections>
                                     <segue destination="KiZ-NZ-aeA" kind="push" identifier="agenda_to_event" id="zEZ-63-eR2"/>
